// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`## UserWeb APIs # Create Web user # POST /api/users-web should create a new web user 1`] = `
Array [
  "_id",
  "createdAt",
  "id",
  "updatedAt",
]
`;

exports[`## UserWeb APIs # Create Web user # POST /api/users-web should get my user info with valid JWT token 1`] = `
Array [
  "_id",
  "createdAt",
  "id",
  "type",
  "updatedAt",
]
`;
